--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "memorypower",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sumit27x.github.io/memory-power-task1",
   "dependencies": {
     "@emailjs/browser": "^4.3.3",
     "@react-google-maps/api": "^2.19.3",
@@ -23,6 +24,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
